--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  background-image: linear-gradient(to right, orange, red);
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  color: green;
+}
+.items {
+  margin: 20px;
+  font-size: 14px;
   color: white;
+  text-decoration: none;
+}
+footer{
+  background-color: grey;
+  text-align: center;
+  padding: 20px 0px;
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+.container{
+  padding: 0 50px;
+}
+.home{
+  height: 70vh;
+  background-image: linear-gradient(to right, green, yellow);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+form{
+  display: grid;
+  grid-template-columns: 1fr 0.2fr;
+  /* width: 50px; */
+  justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+form input{
+  border-radius: 20px 0px 0px 20px;
+  padding: 20px 7px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form button{
+  border-radius: 0px 20px 20px 0;
+  background-color: green;
+  color: white;
+  padding: 20px 7px;
 }
